iac/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parking-slots-api
  labels:
    app: parking-slots-api
spec:
  type: ClusterIP
  selector:
    app: parking-slots-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
